# welder_typical_chain

./: .gitignore  CMakeLists.txt  README.md
backend/welder/bench/: verify_matmul_softmax.py
backend/welder/compiler/: CMakeLists.txt  refactor_map.md  run_welder_compiler.sh  run_welder_pipeline.sh  run_welder_solver.sh  run_welder_to_nvvm_isa.sh
backend/welder/compiler/common/: AffineIntervalEvaluator.cpp  AffineIntervalEvaluator.h  WelderTrace.h
backend/welder/compiler/dispatch/: WelderCompilerAnchorDiscovery.cpp  WelderCompilerAnchorDiscovery.h  WelderCompilerDispatchPlan.cpp  WelderCompilerDispatchPlan.h  WelderCompilerFusionAnchors.cpp  WelderCompilerFusionAnchors.h  WelderCompilerFusionPairBuild.cpp  WelderCompilerFusionPairBuild.h  WelderCompilerModeDispatch.cpp  WelderCompilerModeDispatch.h  WelderCompilerModeDispatchBranchUtils.h  WelderCompilerModeDispatchBranches.h  WelderCompilerModeDispatchGenericBranch.cpp  WelderCompilerModeDispatchGenericBranchBody.h  WelderCompilerModeDispatchKernelAttrsBranch.cpp  WelderCompilerModeDispatchKernelAttrsBranchBody.h  WelderCompilerModeDispatchMatmulBranch.cpp  WelderCompilerModeDispatchMatmulBranchBody.h  WelderCompilerTileDecision.cpp  WelderCompilerTileDecision.h
backend/welder/compiler/driver/: WelderCompileCAPI.cpp  WelderCompileCAPI.h  WelderCompileSession.cpp  WelderCompileSession.h  WelderCompiler.cpp  WelderCompilerCliOptions.h  WelderCompilerDriverHelpers.cpp  WelderCompilerDriverHelpers.h  WelderCompilerMain.h  WelderCompilerPassTraceAndEnv.cpp  WelderCompilerPassTraceAndEnv.h  WelderCompilerRunConfig.cpp  WelderCompilerRunConfig.h  WelderPipeline.cpp
backend/welder/compiler/postprocess/: WelderCompilerMatmulSoftmaxCanonicalize.cpp  WelderCompilerMatmulSoftmaxCanonicalize.h  WelderCompilerMatmulSoftmaxCanonicalizeImpl.h  WelderCompilerMatmulSoftmaxCanonicalizeStage1.h  WelderCompilerMatmulSoftmaxCanonicalizeStage2.h  WelderCompilerMatmulSoftmaxCanonicalizeStage3.h  WelderCompilerMemoryReuseTransforms.cpp  WelderCompilerMemoryReuseTransforms.h  WelderCompilerMemoryReuseTransformsImpl.h  WelderCompilerMemoryReuseTransformsStage1.h  WelderCompilerMemoryReuseTransformsStage2.h  WelderCompilerMemoryReuseTransformsStage3.h  WelderCompilerPostbufferizeFixups.cpp  WelderCompilerPostbufferizeFixups.h  WelderCompilerPostprocessCleanup.cpp  WelderCompilerPostprocessCleanup.h  WelderCompilerPostprocessCleanupImpl.h  WelderCompilerPostprocessCleanupStage1.h  WelderCompilerPostprocessCleanupStage2.h  WelderCompilerPostprocessCleanupStage3.h  WelderCompilerPostprocessCleanupStage4.h
backend/welder/compiler/solver/: WelderProfiler.cpp  WelderProfilerEval.h  WelderProfilerParsing.h  WelderProfilerRuntime.h  WelderSolveOptionDefaults.h  WelderSolver.cpp  WelderSolverCAPI.cpp  WelderSolverCAPI.h  WelderSolverCandidateGenerator.cpp  WelderSolverCandidateGenerator.h  WelderSolverCandidatePolicyHelpers.h  WelderSolverCostModel.cpp  WelderSolverCostModel.h  WelderSolverDumpPlanHelpers.h  WelderSolverDumpReports.h  WelderSolverGraphAnalysisAndFootprintInfer.h  WelderSolverGraphConnectingPaperGlobalShared.h  WelderSolverLib.cpp  WelderSolverLib.h  WelderSolverPaperSolvePath.h  WelderSolverPhaseAFootprintTrafficHelpers.h  WelderSolverPhaseAGridReuseHelpers.h  WelderSolverProfileCompileAndRun.h  WelderSolverProfileRetryHelpers.h  WelderSolverProfilerRunner.cpp  WelderSolverProfilerRunner.h  WelderSolverRecursiveStageTopKCandidates.h  WelderSolverRecursiveStageTopKRegisterTiles.h  WelderSolverRecursiveStageTopKSharedCandidates.h  WelderSolverRecursiveStagesCore.h  WelderSolverReportWriter.cpp  WelderSolverReportWriter.h  WelderSolverSolveEntrypoints.h  WelderSolverSubGraphTilingPaperGlobalShared.h  WelderSolverTrafficCostCore.h  WelderSolverTwoLevelCore.h
backend/welder/compiler/transforms/: WelderCompilerAsyncCopyRewrite.cpp  WelderCompilerAsyncCopyRewrite.h  WelderCompilerAsyncPipelineHelpers.cpp  WelderCompilerAsyncPipelineHelpers.h  WelderCompilerGenericCutEdgesTransformLibrary.cpp  WelderCompilerGenericCutEdgesTransformLibrary.h  WelderCompilerGenericTransformAndFusion.cpp  WelderCompilerGenericTransformAndFusion.h  WelderCompilerMatmulTransformLibrary.cpp  WelderCompilerMatmulTransformLibrary.h  WelderCompilerRowReductionInputPromotion.cpp  WelderCompilerRowReductionInputPromotion.h
backend/welder/mlir_pipeline/: broadcast_expand_add_reduce_chain.mlir  conv2d_relu_generic.mlir  conv2d_relu_host_shared_verify.mlir  cut_edge_diamond.mlir  deep_fusion_chain.mlir  generic_reduction_relu.mlir  layernorm_variance_chain.mlir  matmul.mlir  transform.mlir  (+39 more)
backend/welder/mlir_pipeline/workgroup_alloc_to_launch_pass/: CMakeLists.txt  WorkgroupAllocToLaunch.cpp
bench/: check_perf_guard.sh  pin_baseline.sh  run_ab.sh  run_all_stages.sh  run_compile_pair.sh  run_pure_api_stress.sh  run_regression.sh  run_search.sh  verify.py
bench/baselines/: README.md
compiler/: CMakeLists.txt  main.cpp
compiler/backend/: Toolchain.cpp
compiler/include/wtc/backend/: Toolchain.h
compiler/include/wtc/ir/: ChainCanonicalize.h  Tagging.h
compiler/include/wtc/pipeline/: PipelineRunner.h
compiler/include/wtc/runtime/: PostbufferizeFixups.h
compiler/include/wtc/scheduler/: Search.h
compiler/include/wtc/scheduler/internal/: SearchInternal.h
compiler/include/wtc/transform/: BuildCutEdgesTransform.h
compiler/include/wtc/transform/internal/: BuildCutEdgesTransformInternal.h  CompileApiSession.h
compiler/ir/: ChainCanonicalize.cpp  Tagging.cpp
compiler/pipeline/: PipelineRunner.cpp
compiler/runtime/: PostbufferizeFixups.cpp
compiler/scheduler/: Search.cpp  SearchBackendApi.cpp  SearchBackendProcessChain.cpp  SearchBackendShell.cpp  SearchCommon.cpp
compiler/transform/: BuildCutEdgesTransform.cpp  BuildCutEdgesTransformApi.cpp  BuildCutEdgesTransformCommon.cpp  BuildCutEdgesTransformProcessChain.cpp  BuildCutEdgesTransformShell.cpp  CompileApiSession.cpp
docs/: architecture.md  migration_plan.md
mlir/: matmul_softmax_chain.mlir  matmul_softmax_chain_f16_native.mlir  matmul_softmax_chain_named_softmax.mlir
scripts/: check_layout.sh
(+39 files in other folders)
